# mana-simpleagro

./: .gitignore  README.md  SKILL.md  manifest.yaml  pyproject.toml
src/mana_habilidade_simpleagro/: __init__.py  auth.py  catalog.py  client.py  clients.py  companies.py  erp.py  exceptions.py  geolocation.py  helpers.py  orders.py  pricing.py  safras.py  wallets.py
src/mana_simpleagro/: __init__.py  auth.py  catalog.py  client.py  clients.py  companies.py  erp.py  geolocation.py  orders.py  pricing.py  safras.py  wallets.py
tests/: conftest.py  test_auth.py  test_client.py  test_clients.py  test_facade.py  test_helpers.py  test_modulos_menores.py  test_orders.py
