[project]
name = "mana-simpleagro"
version = "0.1.1"
description = "SDK oficial do Simple Agro para o ecossistema Maná — login OAuth AdonisJS + auto-relogin, CRUD Orders/Clients/Wallets/Properties, Catálogos, Engine de preço, Geoloc, ERP. Consolida em 1 pacote reusável o padrão espalhado em ~10 agentes. SDK canônico da Maná Builder (Camada 2A) — primeiro publicado."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [
    { name = "Sementes Maná LTDA" }
]
keywords = [
    "mana", "habilidade", "mana-builder", "sdk", "simple-agro", "simpleagro",
    "adonisjs", "oauth", "erp", "sementes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
]

[project.urls]
Homepage = "https://github.com/Sementesmana/mana-simpleagro"
Repository = "https://github.com/Sementesmana/mana-simpleagro"
Issues = "https://github.com/Sementesmana/mana-simpleagro/issues"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mana_simpleagro"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/SKILL.md",
    "/manifest.yaml",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
